Resolves: fdo#48932 super slow typing and scrolling in large documents

AFAICS it appears that theres a one to one mapping from a SwFrameControl to
a SwFrm, so in any of the three given classes of Page, Footer or Header a
SwFrm will have zero or one SwFrameControls and a SwFrameControl doesn't
get rebound to a different SwFrm or anything like that, so we can use
a map and index off the SwFrm* to find them rather than constantly
looping over vectors to find the right one.

Maybe could move the SwFrameControl directly in the SwPageFrm's
themselves.

Change-Id: I1194f3cdcab747b61c645003c97e651f47f2bc09